--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Online Shopping Site for Mobiles, Electronics, Furniture, Grocery, Lifestyle, Books &amp; More. Best Offers!
     </title>
-    <link rel="icon" type="image/x-icon" href="Pictures/favicon.png">
+    <link rel="icon" type="image/x-icon" href="pictures/favicon.png">
     <link rel="stylesheet" href="css/navbar.css" />
     <link rel="stylesheet" href="css/main.css">
 </head>
@@ -15,7 +15,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo"><img src="Pictures/nav-bar/logo.png" alt="" width="100px"></div>
+            <div class="logo"><img src="pictures/nav-bar/logo.png" alt="" width="100px"></div>
             <div class="search">
                 <input type="text" name="" id="" placeholder="     Search for products,brands and more">
                 <div class="search-icon">
