--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Online Shopping Site for Mobiles, Electronics, Furniture, Grocery, Lifestyle, Books &amp; More. Best Offers!
     </title>
     <link rel="icon" type="image/x-icon" href="pictures/favicon.png">
-    <link rel="stylesheet" href="css/navbar.css" />
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="navbar.css" />
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
