--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Online Shopping Site for Mobiles, Electronics, Furniture, Grocery, Lifestyle, Books &amp; More. Best Offers!
     </title>
-    <link rel="icon" type="image/x-icon" href="pictures/favicon.png">
+    <link rel="icon" type="image/x-icon" href="Pictures/favicon.png">
     <link rel="stylesheet" href="navbar.css" />
     <link rel="stylesheet" href="main.css">
 </head>
@@ -15,24 +15,24 @@
 <body>
     <header>
         <nav>
-            <div class="logo"><img src="pictures/nav-bar/logo.png" alt="" width="100px"></div>
+            <div class="logo"><img src="Pictures/nav-bar/logo.png" alt="" width="100px"></div>
             <div class="search">
                 <input type="text" name="" id="" placeholder="     Search for products,brands and more">
                 <div class="search-icon">
-                    <img src="pictures/nav-bar/search-icon.png" alt="" width="19px">
+                    <img src="Pictures/nav-bar/search-icon.png" alt="" width="19px">
                 </div>
             </div>
             <div class="login">
                 <b>Login</b>
             </div>
             <div class="cart">
-                <img src="pictures/nav-bar/cart.png">
+                <img src="Pictures/nav-bar/cart.png">
                 <b>Cart</b>
             </div>
             <div class="download">
                 <b>Download App</b>
                 <div class="download-icon">
-                    <img src="pictures/nav-bar/download.png" alt="">
+                    <img src="Pictures/nav-bar/download.png" alt="">
                 </div>
             </div>
         </nav>
@@ -40,35 +40,35 @@
     <main>
         <div class="container">
             <div class="item">
-                <img src="pictures/Menu/offers.webp" alt="" srcset="" width="90px" height="90px">
+                <img src="Pictures/Menu/offers.webp" alt="" srcset="" width="90px" height="90px">
                 <b>Top Offers</b>
             </div>
             <div class="item">
-                <img src="pictures/Menu/mobiles.webp" alt="" srcset="" width="90px" height="90px">
+                <img src="Pictures/Menu/mobiles.webp" alt="" srcset="" width="90px" height="90px">
                 <b>Mobiles</b>
             </div>
             <div class="item">
-                <img src="pictures/Menu/fashion.webp" alt="" srcset="" width="90px" height="90px">
+                <img src="Pictures/Menu/fashion.webp" alt="" srcset="" width="90px" height="90px">
                 <b>Fashion</b>
             </div>
             <div class="item">
-                <img src="pictures/Menu/electronics.webp" alt="" srcset="" width="90px" height="90px">
+                <img src="Pictures/Menu/electronics.webp" alt="" srcset="" width="90px" height="90px">
                 <b>Electronics</b>
             </div>
             <div class="item">
-                <img src="pictures/Menu/home.webp" alt="" srcset="" width=90px" height="90px">
+                <img src="Pictures/Menu/home.webp" alt="" srcset="" width=90px" height="90px">
                 <b>Home</b>
             </div>
             <div class="item">
-                <img src="pictures/Menu/grocery.webp" alt="" srcset="" width="90px" height="90px">
+                <img src="Pictures/Menu/grocery.webp" alt="" srcset="" width="90px" height="90px">
                 <b>Grocery</b>
             </div>
             <div class="item">
-                <img src="pictures/Menu/appliances.webp" alt="" srcset="" width="90px" height="90px">
+                <img src="Pictures/Menu/appliances.webp" alt="" srcset="" width="90px" height="90px">
                 <b>Appliances</b>
             </div>
             <div class="item">
-                <img src="pictures/Menu/travel.webp" alt="" srcset="" width="100px" height="100px">
+                <img src="Pictures/Menu/travel.webp" alt="" srcset="" width="100px" height="100px">
                 <b>Travel</b>
             </div>
         </div>
@@ -87,32 +87,32 @@
             </div>
             <div class="container2">
                 <div class="box-1-items">
-                    <img src="pictures/box-1/tshirts.jpg" alt="" srcset="">
+                    <img src="Pictures/box-1/tshirts.jpg" alt="" srcset="">
                     <p class="box-1-head">Men's Clothing</p>
                     <p class="box-1-foot">Min 60% OFF</p>
                 </div>
                 <div class="box-1-items">
-                    <img src="pictures/box-1/tops.webp" alt="" srcset="">
+                    <img src="Pictures/box-1/tops.webp" alt="" srcset="">
                     <p class="box-1-head">Women Western</p>
                     <p class="box-1-foot">Starts @249/-</p>
                 </div>
                 <div class="box-1-items">
-                    <img src="pictures/box-1/watches.jpg" alt="" srcset="">
+                    <img src="Pictures/box-1/watches.jpg" alt="" srcset="">
                     <p class="box-1-head">Classic Watches</p>
                     <p class="box-1-foot">Upto 70% OFF</p>
                 </div>
                 <div class="box-1-items">
-                    <img src="pictures/box-1/heels.jpg" alt="" srcset="">
+                    <img src="Pictures/box-1/heels.jpg" alt="" srcset="">
                     <p class="box-1-head">Trendy Heels</p>
                     <p class="box-1-foot">Min 40% OFF</p>
                 </div>
                 <div class="box-1-items">
-                    <img src="pictures/box-1/sarees.jpg" alt="" srcset="">
+                    <img src="Pictures/box-1/sarees.jpg" alt="" srcset="">
                     <p class="box-1-head">Women Traditional</p>
                     <p class="box-1-foot">Starts @500/-</p>
                 </div>
                 <div class="box-1-items">
-                    <img src="pictures/box-1/jewellery.jpg" alt="" srcset="">
+                    <img src="Pictures/box-1/jewellery.jpg" alt="" srcset="">
                     <p class="box-1-head">Jewellery Sets</p>
                     <p class="box-1-foot">Upto 40% OFF</p>
 
@@ -131,32 +131,32 @@
             </div>
             <div class="container2">
                 <div class="box-1-items">
-                    <img src="pictures/box-2/phones.jpg" alt="" srcset="">
+                    <img src="Pictures/box-2/phones.jpg" alt="" srcset="">
                     <p class="box-1-head">Latest Smartphones</p>
                     <p class="box-1-foot">Top Sellers</p>
                 </div>
                 <div class="box-1-items">
-                    <img src="pictures/box-2/laptops.jpg" alt="" srcset="">
+                    <img src="Pictures/box-2/laptops.jpg" alt="" srcset="">
                     <p class="box-1-head">Lavish Laptops</p>
                     <p class="box-1-foot">Flat 30% OFF</p>
                 </div>
                 <div class="box-1-items">
-                    <img src="pictures/box-2/cameras.jpg" alt="" srcset="">
+                    <img src="Pictures/box-2/cameras.jpg" alt="" srcset="">
                     <p class="box-1-head">Digital Cameras</p>
                     <p class="box-1-foot">40%-50% OFF</p>
                 </div>
                 <div class="box-1-items">
-                    <img src="pictures/box-2/television.jpg" alt="" srcset="">
+                    <img src="Pictures/box-2/television.jpg" alt="" srcset="">
                     <p class="box-1-head">Engrossing TVs</p>
                     <p class="box-1-foot">Starts @9,999/-</p>
                 </div>
                 <div class="box-1-items">
-                    <img src="pictures/box-2/washing-machines.png" srcset="">
+                    <img src="Pictures/box-2/washing-machines.png" srcset="">
                     <p class="box-1-head">Washing Machines</p>
                     <p class="box-1-foot">Upto 40% OFF</p>
                 </div>
                 <div class="box-1-items">
-                    <img src="pictures/box-2/microwave.jpg" alt="" srcset="">
+                    <img src="Pictures/box-2/microwave.jpg" alt="" srcset="">
                     <p class="box-1-head">Mircrowaves</p>
                     <p class="box-1-foot">Min 25% OFF</p>
 
@@ -175,32 +175,32 @@
             </div>
             <div class="container2">
                 <div class="box-1-items">
-                    <img src="pictures/box-3/fitness-equipments.jpg" alt="" srcset="">
+                    <img src="Pictures/box-3/fitness-equipments.jpg" alt="" srcset="">
                     <p class="box-1-head">Fitness Equipments</p>
                     <p class="box-1-foot">Min 60% OFF</p>
                 </div>
                 <div class="box-1-items">
-                    <img src="pictures/box-3/sports-wear.jpg" alt="" srcset="">
+                    <img src="Pictures/box-3/sports-wear.jpg" alt="" srcset="">
                     <p class="box-1-head">Sports Wear's</p>
                     <p class="box-1-foot">Top Brands</p>
                 </div>
                 <div class="box-1-items">
-                    <img src="pictures/box-3/fitness-band.jpg" alt="" srcset="">
+                    <img src="Pictures/box-3/fitness-band.jpg" alt="" srcset="">
                     <p class="box-1-head">Fitness Bands</p>
                     <p class="box-1-foot">Starts @999/-</p>
                 </div>
                 <div class="box-1-items">
-                    <img src="pictures/box-3/yoga.jpg" alt="" srcset="">
+                    <img src="Pictures/box-3/yoga.jpg" alt="" srcset="">
                     <p class="box-1-head">Yoga Equipments</p>
                     <p class="box-1-foot">Flat 20% OFF</p>
                 </div>
                 <div class="box-1-items">
-                    <img src="pictures/box-3/cricket.jpg" srcset="">
+                    <img src="Pictures/box-3/cricket.jpg" srcset="">
                     <p class="box-1-head">Cricket</p>
                     <p class="box-1-foot">30%-40% OFF</p>
                 </div>
                 <div class="box-1-items">
-                    <img src="pictures/box-3/protein.jpg" alt="" srcset="">
+                    <img src="Pictures/box-3/protein.jpg" alt="" srcset="">
                     <p class="box-1-head">Protein Supplements</p>
                     <p class="box-1-foot">Upto 50% OFF</p>
 
@@ -219,32 +219,32 @@
             </div>
             <div class="container2">
                 <div class="box-1-items">
-                    <img src="pictures/box-4/mask.jpg" alt="" srcset="">
+                    <img src="Pictures/box-4/mask.jpg" alt="" srcset="">
                     <p class="box-1-head">Masks</p>
                     <p class="box-1-foot">Best Sellers</p>
                 </div>
                 <div class="box-1-items">
-                    <img src="pictures/box-4/sanitizer.jpg" alt="" srcset="">
+                    <img src="Pictures/box-4/sanitizer.jpg" alt="" srcset="">
                     <p class="box-1-head">Sanitizers</p>
                     <p class="box-1-foot">Upto 25% Discount</p>
                 </div>
                 <div class="box-1-items">
-                    <img src="pictures/box-4/handwash.jpg" alt="" srcset="">
+                    <img src="Pictures/box-4/handwash.jpg" alt="" srcset="">
                     <p class="box-1-head">Handwash</p>
                     <p class="box-1-foot">Min 40% OFF</p>
                 </div>
                 <div class="box-1-items">
-                    <img src="pictures/box-4/ppe-kit.jpg" alt="" srcset="">
+                    <img src="Pictures/box-4/ppe-kit.jpg" alt="" srcset="">
                     <p class="box-1-head">PPE Kits</p>
                     <p class="box-1-foot">Starts @149/-</p>
                 </div>
                 <div class="box-1-items">
-                    <img src="pictures/box-4/gloves.jpg" srcset="">
+                    <img src="Pictures/box-4/gloves.jpg" srcset="">
                     <p class="box-1-head">Gloves</p>
                     <p class="box-1-foot">Flat 30% OFF</p>
                 </div>
                 <div class="box-1-items">
-                    <img src="pictures/box-4/vitamin.jpg" alt="" srcset="">
+                    <img src="Pictures/box-4/vitamin.jpg" alt="" srcset="">
                     <p class="box-1-head">Immunity Vitamins</p>
                     <p class="box-1-foot">100% Natural</p>
 
